--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -7,9 +7,14 @@
     <link rel="shortcut icon" href="../assets/img/logo.png">
     <title>GlobanTerra | Equipo</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
+    <script>
+        AOS.init();
+    </script>
     <div class="mainContainer"><!--Main container for grid template-->
         <header><!--header starts-->
             <a class="logoLink" id="logo" href="../index.html">
@@ -38,7 +43,7 @@
                 </div>
     
                 <article id="nicolas-bolcatto">
-                    <div class="container leftBorder">
+                    <div class="container leftBorder" data-aos="fade-right" data-aos-duration="1200">
                         <div class="teamPhoto">
                             <img src=../assets/img/nicolas.jpg alt="foto nicolas">
                         </div>
@@ -57,7 +62,7 @@
                 </article>
     
                 <article id="manuel-odisio">
-                    <div class="container leftBorder">
+                    <div class="container leftBorder" data-aos="fade-right" data-aos-duration="1200">
                         <div class="teamPhoto">
                             <img class="teamPhoto" src=../assets/img/manuel.jpg alt="foto manuel">
                         </div>
