--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -7,9 +7,14 @@
     <link rel="shortcut icon" href="../assets/img/logo.png">
     <title>GlobanTerra | Experiencias</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
+    <script>
+        AOS.init();
+    </script>
     <div class="mainContainer"><!--Main container for grid template-->
         <header><!--header starts-->
             <a class="logoLink" id="logo" href="../index.html">
@@ -37,7 +42,7 @@
         </div>
         <section id=experiencias>
             <article id=barranca>
-                <div class="container leftBorder">
+                <div class="container leftBorder" data-aos="fade-right" data-aos-duration="1200">
                     <div class="text">
                         <div class="fs4">
                             <h3>Relevamiento Barranca Fray Luis Beltrán</h3>
@@ -55,10 +60,10 @@
             </article>
 
             <article id=rna012>
-                <div class="container leftBorder">
+                <div class="container leftBorder" data-aos="fade-right" data-aos-duration="1200">
                     <div class="text">
                         <div class="fs4">
-                            <h2>Relevamiento RNA012 Tramo Zavalla-Roldán</h2>
+                            <h3>Relevamiento RNA012 Tramo Zavalla-Roldán</h3>
                         </div>
                         <div class="fs2">
                             <p>Presentamos el modelo 3D de alta resolución obtenido para 1 km de la Ruta Nacional A012 en el tramo Zavalla-Roldán. El relevamiento fue realizado con un dron Phantom 4V2.0, con una duración total de vuelo de 12:33, a 90 m.
