--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,9 +7,14 @@
     <link rel="shortcut icon" href="../assets/img/logo.png">
     <title>GlobanTerra | Servicios</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
+    <script>
+        AOS.init();
+    </script>
     <div class="mainContainer"><!--Main container for grid template-->
         <header><!--header starts-->
             <a class="logoLink" id="logo" href="../index.html">
@@ -37,7 +42,9 @@
             </div>
 
             <section class="services" id="services">
-                <article class="containerService" id="aerial">
+                <article class="containerService" data-aos="zoom-in"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000" id="aerial">
                     <div class="serviceTitle">
                         <h2>Aerial Mapping</h2>
                     </div>
@@ -57,7 +64,9 @@
                     </div>
                 </article>
 
-                <article class="containerService" id="control">
+                <article class="containerService" data-aos="zoom-in"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000" id="control">
                     <div class="serviceTitle">
                         <h2>Avance de obra</h2>
                     </div>
@@ -70,7 +79,9 @@
                     </div>
                 </article>
 
-                <article class="containerService" id="topo">
+                <article class="containerService" data-aos="zoom-in"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000" id="topo">
                     <div class="serviceTitle">
                         <h2>Topografía terrestre</h2>
                     </div>
@@ -84,7 +95,9 @@
                     </div>
                 </article>
 
-                <article class="containerService" id="inventory">
+                <article class="containerService" data-aos="zoom-in"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000" id="inventory">
                     <div class="serviceTitle">
                         <h2>Inventario de obras viales y ferroviarias</h2>
                     </div>
@@ -95,7 +108,9 @@
                     </div>
                 </article>
 
-                <article class="containerService" id="sig">
+                <article class="containerService" data-aos="zoom-in"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000" id="sig">
                     <div class="serviceTitle">
                         <h2>Sistemas de Información Geográfica</h2>
                     </div>
@@ -108,7 +123,9 @@
                     </div>
                 </article>
 
-                <article class="containerService" id="satellite">
+                <article class="containerService" data-aos="zoom-in"
+                data-aos-easing="ease-out-cubic"
+                data-aos-duration="2000" id="satellite">
                     <div class="serviceTitle">
                         <h2>Análisis y procesamiento satelital</h2>
                     </div>
