Minor changes in master branch to improve responsiveness + change of logos

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -48,8 +48,8 @@
                     <div class="serviceTitle">
                         <h2>Aerial Mapping</h2>
                     </div>
-                    <div class="logo">
-                        <img src="../assets/img/aerial-mapping-logo.svg" alt="aerial-mapping-logo">
+                    <div class="serviceLogo">
+                        <img src="../assets/img/aerial-mapping-logo.png" alt="aerial-mapping-logo">
                     </div>
                     <div class="serviceText">
                         <p>Utilizamos aerofotogrametría para generar cartografía digital de alta resolución en menos tiempo obteniendo:</p>
@@ -68,10 +68,10 @@
                 data-aos-easing="ease-out-cubic"
                 data-aos-duration="2000" id="control">
                     <div class="serviceTitle">
-                        <h2>Avance de obra</h2>
+                        <h2>Certificación de obras</h2>
                     </div>
-                    <div class="logo">
-                        <img class="logo" src="../assets/img/mediciones-logo.svg" alt="mediciones-logo">
+                    <div class="serviceLogo">
+                        <img src="../assets/img/mediciones-logo.png" alt="mediciones-logo">
                     </div>
                     <div class="serviceText">
                         <p>Realizamos mediciones de precisión en distancias, áreas y volúmenes sobre modelos 3D de alta resolución.</p>
@@ -85,8 +85,8 @@
                     <div class="serviceTitle">
                         <h2>Topografía terrestre</h2>
                     </div>
-                    <div class="logo">
-                        <img class="logo" src="../assets/img/topografia-logo.svg" alt="topografia-logo">
+                    <div class="serviceLogo">
+                        <img src="../assets/img/topografia-logo.png" alt="topografia-logo">
                     </div>
                     <div class="serviceText">
                         <p>En aquellos sectores donde la vegetación o las estructuras existentes no permiten un relevamiento aéreo, utilizamos tecnología GNSS y Estaciones Totales para obtener información geoespacial adicional, incorporándola a nuestros
@@ -101,7 +101,9 @@
                     <div class="serviceTitle">
                         <h2>Inventario de obras viales y ferroviarias</h2>
                     </div>
-                    <img class="logo" src="../assets/img/inventario-logo.svg" alt="inventario-logo">
+                    <div class="serviceLogo">
+                        <img src="../assets/img/inventario-logo.png" alt="inventario-logo">
+                    </div>
                     <div class="serviceText">
                         <p>A partir de modelos tridimensionales de alta resolución, identificamos, georreferenciamos y registramos señalización vertical y horizontal, patrones de fisuración, tipo y número de durmientes, barandas de defensa, estado de cunetas
                             y alcantarillas, alambrados perimetrales e intercambiadores, entre otras estructuras relevantes.</p>
@@ -114,8 +116,8 @@
                     <div class="serviceTitle">
                         <h2>Sistemas de Información Geográfica</h2>
                     </div>
-                    <div class="logo">
-                        <img src="../assets/img/sig-logo.svg" alt="sig-logo">
+                    <div class="serviceLogo">
+                        <img src="../assets/img/sig-logo.png" alt="sig-logo">
                     </div>
                     <div class="serviceText">
                         <p>Articulamos herramientas de software libre para organizar, almacenar, manipular, analizar y modelizar grandes cantidades de datos georreferenciados.</p>
@@ -129,8 +131,8 @@
                     <div class="serviceTitle">
                         <h2>Análisis y procesamiento satelital</h2>
                     </div>
-                    <div class="logo">
-                        <img src="../assets/img/satelital-logo.svg" alt="satelital-logo">
+                    <div class="serviceLogo">
+                        <img src="../assets/img/satelital-logo.png" alt="satelital-logo">
                     </div>
                     <div class="serviceText">
                         <p>A partir del procesamiento de imágenes LANDSAT, MODIS, SENTINEL y otras, obtenemos mapas de usos del suelo, índices de vegetación (NDVI, SAVI, etc.), humedad del suelo, huella urbana, rastros de incendios forestales, y cualquier
@@ -174,6 +176,10 @@
                     <img src="../assets/img/twitter.png" alt="logo-twitter">
                 </a>
 
+            </section>
+
+            <section class="creds">
+                <span><p>Credits:</p><a href="https://www.flaticon.com/free-icons/drone" title="drone icons">Drone icons created by Octopocto - Flaticon</a></span>
             </section>
 
         </footer><!--footer ends-->
