--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -2,129 +2,205 @@
 <html lang="es">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../assets/img/logo.png">
-    <title>GlobanTerra | Experiencias</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- My CSS-->
     <link rel="stylesheet" href="../css/style.css">
+
+    <!-- AOS CSS and JS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <title>GlobanTerra</title>
 </head>
 
 <body>
+    <!--Animation script to link to AOS library-->
     <script>
         AOS.init();
     </script>
-    <div class="mainContainer"><!--Main container for grid template-->
-        <header><!--header starts-->
-            <a class="logoLink" id="logo" href="../index.html">
-                <img src="../assets/img/logo.png" alt="logo globanterra">
-            </a>
-            <a class="logoText" id="logo" href="../index.html">
-                <h1>GlobanTerra</h1>
-            </a>
-        </header><!--header ends-->
-        
-        <nav><!--nav starts-->
-            <ul class="navList">
-                <li class="listItem"><a class="link" href="../index.html">Home</a></li>
-                <li class="listItem"><a class="link" href="./servicios.html">Servicios</a></li>
-                <li class="listItem"><a class="link" href="./experiencias.html">Experiencias</a></li>
-                <li class="listItem"><a class="link" href="./equipo.html">Equipo</a></li>
-                <li class="listItem"><a class="link" href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav><!--nav ends-->
 
-        <main><!--main page starts-->
+    <!--header starts-->
+    <header>
+        <div class="container-fluid">
+            <a class="text-decoration-none" href="../index.html">
+                <img class="d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
+                <h1 class="logoText text-center fw-bold">GlobanTerra</h1>
+            </a>
+        </div>
+    </header>
+    <!--header ends-->
+    <!--nav starts-->
+    <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+                <div class="navbar-nav m-auto pe-4">
+                    <div class="myButton container-fluid">
+                        <a class="myButtonText" href="../index.html">Home</a>
+                    </div>
+                    <div class="myButton container-fluid">
+                        <a class="myButtonText" href="./servicios.html">Servicios</a>
+                    </div>
+                    <div class="myButton container-fluid">
+                        <a class="myButtonText" href="./experiencias.html">Experiencias</a>
+                    </div>
+                    <div class="myButton container-fluid">
+                        <a class="myButtonText" href="./equipo.html">Equipo</a>
+                    </div>
+                    <div class="myButton container-fluid">
+                        <a class="myButtonText" href="./contacto.html">Contacto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!--nav ends-->
 
+    <!--main starts-->
+    <main>
         <div class="title">
-            <h1>Nuestras experiencias</h1>
+            <h1 class="text-center">Nuestras experiencias</h1>
         </div>
         <section id=experiencias>
-            <article id=barranca>
-                <div class="container leftBorder" data-aos="fade-right" data-aos-duration="1200">
-                    <div class="text">
-                        <div class="fs4">
-                            <h3>Relevamiento Barranca Fray Luis Beltrán</h3>
+            <article id="barranca">
+                <div class="card myContainer m-4">
+                    <div class="row g-0 m-3">
+                        <div id="iframe1" class="col-sm-12 col-md-6">
+                            <iframe class="w-100 h-100" src="https://www.youtube.com/embed/D9nzl4KLxX4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <div class="fs2">
-                            <p>Presentamos el relevamiento aerofotogramétrico realizado en septiembre de 2020 para el análisis de estabilidad de la barranca. El relevamiento fue realizado con un dron Phantom 4V2.0, con dos vuelos de 13 y 18 minutos de duración
-                                respectivamente, a 60 m. de altura y capturando un total de 448 imágenes.<br> El modelo resultante tiene una resolución GSD de 1,64 cm/pixel, cubriendo un área de 3,24 hectáreas y fue procesado computacionalmente en apenas
-                                2,2 horas.<br> Entre los productos derivados del modelo destacamos:</p>
+                        <div class="col-sm-12 col-md-6">
+                            <div class="card-body">
+                                <h2 class="card-title">Relevamiento Barranca Fray Luis Beltrán</h2>
+                                <p class="fs-4 card-text">Presentamos el relevamiento aerofotogramétrico realizado en septiembre de 2020 para el análisis de estabilidad de la barranca. El relevamiento fue realizado con un dron Phantom 4V2.0, con dos vuelos de 13 y 18 minutos de
+                                    duración respectivamente, a 60 m. de altura y capturando un total de 448 imágenes.<br> El modelo resultante tiene una resolución GSD de 1,64 cm/pixel, cubriendo un área de 3,24 hectáreas y fue procesado computacionalmente
+                                    en apenas 2,2 horas.<br> Entre los productos derivados del modelo destacamos:</p>
+                                <ul class="fs-4">
+                                    <li>Nube de puntos densa</li>
+                                    <li>Curvas de nivel cada 20 cm.</li>
+                                    <li>Ortomosaico georreferenciado con precisión centimétrica</li>
+                                    <li>9 Perfiles topográficos de barranca</li>
+                                    <li>Ortofachada frontal de barranca</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="video">
-                        <iframe class="iframe" src="https://www.youtube.com/embed/D9nzl4KLxX4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </article>
 
-            <article id=rna012>
-                <div class="container leftBorder" data-aos="fade-right" data-aos-duration="1200">
-                    <div class="text">
-                        <div class="fs4">
-                            <h3>Relevamiento RNA012 Tramo Zavalla-Roldán</h3>
+            <article id="rna012">
+                <div class="card myContainer m-4">
+                    <div class="row g-0 m-3">
+                        <div id="iframe2" class="iframe col-sm-12 col-md-6">
+                            <iframe class="w-100 h-100" src="https://www.youtube.com/embed/02d93-L5CqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <div class="fs2">
-                            <p>Presentamos el modelo 3D de alta resolución obtenido para 1 km de la Ruta Nacional A012 en el tramo Zavalla-Roldán. El relevamiento fue realizado con un dron Phantom 4V2.0, con una duración total de vuelo de 12:33, a 90 m.
-                                de altura y capturando un total de 249 imágenes.<br> El modelo resultante tiene una resoluciójn GSD de 2,56 cm/pixel, cubriendo un área de 22,57 hectáreas y fue procesado computacionalmente en apenas 1,7 horas.<br> Entre
-                                los resultados obtenidos destacamos:
-                            </p>
-
-                            <ul>
-                                <li>Identificación de patrones de fisuración de calzada</li>
-                                <li>Relevamiento de geometría y textura de cunetas</li>
-                                <li>Identificación y medición de alcantarillas</li>
-                                <li>Identificación y metraje de bacheos, con georreferenciación</li>
-                            </ul>
-
+                        <div class="col-sm-12 col-md-6">
+                            <div class="card-body">
+                                <h2 class="card-title">Relevamiento RNA012 Tramo Zavalla-Roldán</h2>
+                                <p class="fs-4 card-text">Presentamos el modelo 3D de alta resolución obtenido para 1 km de la Ruta Nacional A012 en el tramo Zavalla-Roldán. El relevamiento fue realizado con un dron Phantom 4V2.0, con una duración total de vuelo de 12:33, a 90
+                                    m. de altura y capturando un total de 249 imágenes.<br> El modelo resultante tiene una resoluciójn GSD de 2,56 cm/pixel, cubriendo un área de 22,57 hectáreas y fue procesado computacionalmente en apenas 1,7 horas.<br>                                    Entre los resultados obtenidos destacamos:</p>
+                                <ul class="fs-4">
+                                    <li>Identificación de patrones de fisuración de calzada</li>
+                                    <li>Relevamiento de geometría y textura de cunetas</li>
+                                    <li>Identificación y medición de alcantarillas</li>
+                                    <li>Identificación y metraje de bacheos, con georreferenciación</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="video">
-                        <iframe class="iframe" src="https://www.youtube.com/embed/02d93-L5CqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </article>
         </section>
-        </main> <!--main page ends-->
-
-        <footer id="footer"><!--footer starts-->
-        <nav>
-            <ul class="navList">
-                <li class="listItem"><a class="link" href="../index.html">Home</a></li>
-                <li class="listItem"><a class="link" href="./servicios.html">Servicios</a></li>
-                <li class="listItem"><a class="link" href="./experiencias.html">Experiencias</a></li>
-                <li class="listItem"><a class="link" href="./equipo.html">Equipo</a></li>
-                <li class="listItem"><a class="link" href="./contacto.html">Contacto</a></li>
-            </ul>
+    </main>
+    <!--main page ends-->
+    <!--footer starts-->
+    <footer>
+        <!--nav starts-->
+        <nav class="navbar navbar-expand-md navbar-light myNav sticky-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+                    <div class="navbar-nav m-auto pe-4">
+                        <div class="myButton container-fluid">
+                            <a class="myButtonText" href="../index.html">Home</a>
+                        </div>
+                        <div class="myButton container-fluid">
+                            <a class="myButtonText" href="./servicios.html">Servicios</a>
+                        </div>
+                        <div class="myButton container-fluid">
+                            <a class="myButtonText" href="./experiencias.html">Experiencias</a>
+                        </div>
+                        <div class="myButton container-fluid">
+                            <a class="myButtonText" href="./equipo.html">Equipo</a>
+                        </div>
+                        <div class="myButton container-fluid">
+                            <a class="myButtonText" href="./contacto.html">Contacto</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
-
-        <section class="shareContainer" id="contact">
-
-            <a class="link" id="email" href="mailto:contacto@globanTerra.com.ar">
-                <img src="../assets/img/email.png" alt="logo-email">
-            </a>
-
-            <a class="link" id="whatsapp" href="https://api.whatsapp.com/send?phone=05493416428768&text=Hola, quiero conocer más sobre GlobanTerra" target="_blank">
-                <img src="../assets/img/whatsapp.png" alt="logo-whatsapp">
-            </a>
-
-            <a class="link" id="linkedin" href="https://www.linkedin.com/in/globanterra/" target="=_blank">
-                <img src="../assets/img/linkedin.png" alt="logo-linkedin">
-            </a>
-
-            <a class="link" id="instagram" href="https://www.instagram.com/globanterra/" target="_blank">
-                <img src="../assets/img/instagram.png" alt="logo-instagram">
-            </a>
-
-            <a class="link" id="twitter" href="https://twitter.com/globanterra" target="_blank">
-                <img src="../assets/img/twitter.png" alt="logo-twitter">
-            </a>
-
+        <!--nav ends-->
+        <!--social networks start-->
+        <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row">
+            <div class="container pt-3">
+                <a id="email" href="mailto:contacto@globanterra.com.ar">
+                    <img class="d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
+                </a>
+            </div>
+            <div class="container pt-3">
+                <a id="whatsapp" href="https://api.whatsapp.com/send?phone=05493416428768&text=Hola, quiero conocer más sobre GlobanTerra" target="_blank">
+                    <img class="d-block mx-auto" width=70px src="../assets/img/whatsapp.png" alt="logo-whatsapp">
+                </a>
+            </div>
+            <div class="container pt-3">
+                <a id="linkedin" href="https://www.linkedin.com/in/globanterra/" target="=_blank">
+                    <img class="d-block mx-auto" width=70px src="../assets/img/linkedin.png" alt="logo-linkedin">
+                </a>
+            </div>
+            <div class="container pt-3">
+                <a id="instagram" href="https://www.instagram.com/globanterra/" target="_blank">
+                    <img class="d-block mx-auto" width=70px src="../assets/img/instagram.png" alt="logo-instagram">
+                </a>
+            </div>
+            <div class="container pt-3 pb-3">
+                <a id="twitter" href="https://twitter.com/globanterra" target="_blank">
+                    <img class="d-block mx-auto" width=70px src="../assets/img/twitter.png" alt="logo-twitter">
+                </a>
+            </div>
         </section>
+        <!--social networks end-->
+        <!--credits start-->
+        <section class="row">
+            <article class="col-sm-12 m-auto">
+                <p class="text-center fw-bold fs-5">Desarrollado por Nico Bolcatto</p>
+                <p class="text-center fw-bold fs-5">Contacto: nicobolcatto@gmail.com</p>
+            </article>
+        </section>
+        <!--credits end-->
+    </footer>
+    <!--footer ends-->
 
-        </footer><!--footer ends-->
-    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
 </body>
 
 </html>
