Added animations to Social Networks logos and main Logo

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -29,7 +29,7 @@
     <header>
         <div class="container-fluid">
             <a class="text-decoration-none" href="../index.html">
-                <img class="d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
+                <img class="mainLogo d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
                 <h1 class="logoText text-center fw-bold">GlobanTerra</h1>
             </a>
         </div>
@@ -140,27 +140,27 @@
         <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row">
             <div class="container pt-3">
                 <a id="email" href="mailto:contacto@globanterra.com.ar">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="whatsapp" href="https://api.whatsapp.com/send?phone=05493416428768&text=Hola, quiero conocer más sobre GlobanTerra" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/whatsapp.png" alt="logo-whatsapp">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/whatsapp.png" alt="logo-whatsapp">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="linkedin" href="https://www.linkedin.com/in/globanterra/" target="=_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/linkedin.png" alt="logo-linkedin">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/linkedin.png" alt="logo-linkedin">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="instagram" href="https://www.instagram.com/globanterra/" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/instagram.png" alt="logo-instagram">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/instagram.png" alt="logo-instagram">
                 </a>
             </div>
             <div class="container pt-3 pb-3">
                 <a id="twitter" href="https://twitter.com/globanterra" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/twitter.png" alt="logo-twitter">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/twitter.png" alt="logo-twitter">
                 </a>
             </div>
         </section>
