--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -29,7 +29,7 @@
     <header>
         <div class="container-fluid">
             <a class="text-decoration-none" href="../index.html">
-                <img class="d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
+                <img class="mainLogo d-block m-auto" src="../assets/img/logo.png" alt="logo globanterra">
                 <h1 class="logoText text-center fw-bold">GlobanTerra</h1>
             </a>
         </div>
@@ -72,7 +72,7 @@
 
         <section class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mx-3 mb-5 g-3">
             <div class="col">
-                <div class="myContainer card h-100 mt-3">
+                <div class="myContainer card h-100 mt-3" data-aos="zoom-in" data-aos-duration="1000">
                     <img class="w-50 m-auto py-5" src="../assets/img/aerial-mapping-logo.png" class="card-img-top" alt="aerial-mapping-image">
                     <div class="card-body px-4">
                         <h3 class="fw-bold card-title">Aerial Mapping</h3>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="myContainer card h-100 mt-3">
+                <div class="myContainer card h-100 mt-3" data-aos="zoom-in" data-aos-duration="1000">
                     <img class="w-50 m-auto py-5" src="../assets/img/mediciones-logo.png" class="card-img-top" alt="control-image">
                     <div class="card-body">
                         <h3 class="fw-bold card-title">Certificación de obras</h3>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="myContainer card h-100 mt-3">
+                <div class="myContainer card h-100 mt-3" data-aos="zoom-in" data-aos-duration="1000">
                     <img class="w-50 m-auto py-5" src="../assets/img/topografia-logo.png" class="card-img-top" alt="topography-image">
                     <div class="card-body">
                         <h3 class="fw-bold card-title">Topografía terrestre</h3>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="myContainer card h-100 mt-3">
+                <div class="myContainer card h-100 mt-3" data-aos="zoom-in" data-aos-duration="1000">
                     <img class="w-50 m-auto py-5" src="../assets/img/inventario-logo.png" class="card-img-top" alt="inventory-image">
                     <div class="card-body">
                         <h3 class="fw-bold card-title">Inventario de obras viales y ferroviarias</h3>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="myContainer card h-100 mt-3">
+                <div class="myContainer card h-100 mt-3" data-aos="zoom-in" data-aos-duration="1000">
                     <img class="w-50 m-auto py-5" src="../assets/img/sig-logo.png" class="card-img-top" alt="sig-image">
                     <div class="card-body">
                         <h3 class="fw-bold card-title">Sistemas de Información Geográfica</h3>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="myContainer card h-100 mt-3">
+                <div class="myContainer card h-100 mt-3" data-aos="zoom-in" data-aos-duration="1000">
                     <img class="w-50 m-auto py-5" src="../assets/img/satelital-logo.png" class="card-img-top" alt="satellite-image">
                     <div class="card-body">
                         <h3 class="fw-bold card-title">Análisis y procesamiento satelital</h3>
@@ -174,27 +174,27 @@
         <section class="container-fluid d-sm-flex flex-sm-column d-md-flex flex-md-row">
             <div class="container pt-3">
                 <a id="email" href="mailto:contacto@globanterra.com.ar">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/email.png" alt="logo-email">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="whatsapp" href="https://api.whatsapp.com/send?phone=05493416428768&text=Hola, quiero conocer más sobre GlobanTerra" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/whatsapp.png" alt="logo-whatsapp">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/whatsapp.png" alt="logo-whatsapp">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="linkedin" href="https://www.linkedin.com/in/globanterra/" target="=_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/linkedin.png" alt="logo-linkedin">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/linkedin.png" alt="logo-linkedin">
                 </a>
             </div>
             <div class="container pt-3">
                 <a id="instagram" href="https://www.instagram.com/globanterra/" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/instagram.png" alt="logo-instagram">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/instagram.png" alt="logo-instagram">
                 </a>
             </div>
             <div class="container pt-3 pb-3">
                 <a id="twitter" href="https://twitter.com/globanterra" target="_blank">
-                    <img class="d-block mx-auto" width=70px src="../assets/img/twitter.png" alt="logo-twitter">
+                    <img class="socialNetLogo d-block mx-auto" width=70px src="../assets/img/twitter.png" alt="logo-twitter">
                 </a>
             </div>
         </section>
